--- a/Presentation/Safari.UI.Web/Views/Shared/_MenuPartial.cshtml
+++ b/Presentation/Safari.UI.Web/Views/Shared/_MenuPartial.cshtml
@@ -4,4 +4,19 @@
     <ul class="nav navbar-nav">
         <li>@Html.ActionLink("Especie", "Index", "Especie")</li>
     </ul>
+    <ul class="nav navbar-nav">
+        <li>@Html.ActionLink("Sala", "Index", "Sala")</li>
+    </ul>
+    <ul class="nav navbar-nav">
+        <li>@Html.ActionLink("Cliente", "Index", "Cliente")</li>
+    </ul>
+    <ul class="nav navbar-nav">
+        <li>@Html.ActionLink("Mascota", "Index", "Mascota")</li>
+    </ul>
+    <ul class="nav navbar-nav">
+        <li>@Html.ActionLink("Tipo Movimiento", "Index", "TipoMovimiento")</li>
+    </ul>
+    <ul class="nav navbar-nav">
+        <li>@Html.ActionLink("Tipo Servicio", "Index", "TipoServicio")</li>
+    </ul>
 }
