--- a/Presentation/Safari.UI.Web/Areas/Admin/Views/Cliente/Delete.cshtml
+++ b/Presentation/Safari.UI.Web/Areas/Admin/Views/Cliente/Delete.cshtml
@@ -2,13 +2,13 @@
 
 @{
     ViewBag.Title = "Eliminar";
-    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/Admin/Views/Shared/_LayoutEmpty.cshtml";
 
 }
 
 <h2>Eliminar</h2>
 
-<h3>¿Está seguro que desea eliminar el registro?</h3>
+<h3>¿Está seguro que desea eliminar el Cliente @Model.Nombre @Model.Apellido?</h3>
 <br />
 <div>
     <h4>Cliente</h4>
@@ -76,8 +76,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Eliminar" class="btn btn-sm btn-danger" />
-            @Html.ActionLink("Volver al listado", "Index", new { id = "new" }, htmlAttributes: new { @class = "btn btn-sm btn-info", @style = "margin-right: 10px" })
+            <input style="margin-right: 10px" type="submit" value="Eliminar" class="btn btn-sm btn-danger" onclick="parent.jQuery.fancybox.close()" />
+            <input type="button" value="Volver" class="btn btn-sm btn-info" onclick="parent.jQuery.fancybox.close()" />
         </div>
     }
 </div>
