--- a/Presentation/Safari.UI.Web/Areas/Admin/Views/Especie/Details.cshtml
+++ b/Presentation/Safari.UI.Web/Areas/Admin/Views/Especie/Details.cshtml
@@ -5,10 +5,8 @@
     Layout = "~/Areas/Admin/Views/Shared/_LayoutEmpty.cshtml";
 }
 
-<h2>Detalles</h2>
-
 <div>
-    <h4>Especie</h4>
+    <h4>Detalles - Especie</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
