--- a/Presentation/Safari.UI.Web/Areas/Admin/Views/Especie/Index.cshtml
+++ b/Presentation/Safari.UI.Web/Areas/Admin/Views/Especie/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model PagedList.IPagedList<Safari.Entities.Sala>
+﻿@model PagedList.IPagedList<Safari.Entities.Especie>
 @using PagedList.Mvc;
 @{
     ViewBag.Title = "Listado de Especies";
