--- a/Presentation/Safari.UI.Web/Areas/Admin/Views/TipoMovimiento/Index.cshtml
+++ b/Presentation/Safari.UI.Web/Areas/Admin/Views/TipoMovimiento/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PagedList.IPagedList<Safari.Entities.TipoMovimiento>
 @using PagedList.Mvc;
 @{
-    ViewBag.Title = "Listado de Especies";
+    ViewBag.Title = "Listado de Tipo de Movimientos";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
