--- a/Presentation/Safari.UI.Web/Areas/Admin/Views/Cliente/Create.cshtml
+++ b/Presentation/Safari.UI.Web/Areas/Admin/Views/Cliente/Create.cshtml
@@ -2,13 +2,9 @@
 
 @{
     ViewBag.Title = "Nuevo";
-    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/Admin/Views/Shared/_LayoutEmpty.cshtml";
 }
-@section head {
-
-    <link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet" />
-}
-<h2>Nuevo</h2>
+<link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet" />
 
 
 @using (Html.BeginForm("Create", "Cliente", FormMethod.Post, new { @id = "frmCreate" }))
@@ -16,7 +12,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Cliente</h4>
+        <h4>Nuevo Cliente</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -76,15 +72,13 @@
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Crear" class="btn btn-sm btn-success" />
+            <div class="col-md-offset-2 col-md-9">
+                <input style="margin-right: 10px" type="submit" value="Crear" class="btn btn-sm btn-success" onclick="parent.jQuery.fancybox.close()" />
+                <input type="button" value="Volver" class="btn btn-sm btn-info" onclick="parent.jQuery.fancybox.close()" />
             </div>
         </div>
     </div>
 }
-<div>
-    @Html.ActionLink("Volver al listado", "Index", new { id = "new" }, htmlAttributes: new { @class = "btn btn-sm btn-info" })
-</div>
 
 @section Scripts {
     @*http://www.kestrelblackmore.com/blog/jquery-datepicker-mvc4*@
