--- a/Presentation/Safari.UI.Web/Areas/Admin/Views/Especie/Edit.cshtml
+++ b/Presentation/Safari.UI.Web/Areas/Admin/Views/Especie/Edit.cshtml
@@ -5,14 +5,12 @@
     Layout = "~/Areas/Admin/Views/Shared/_LayoutEmpty.cshtml";
 }
 
-<h2>Editar</h2>
-
 @using (Html.BeginForm("editEspecie"))
 {
     @Html.AntiForgeryToken()
     
     <div class="">
-        <h4>Especie</h4>
+        <h4>Editar Especie</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
