--- a/Presentation/Safari.UI.Web/Areas/Admin/Views/Medico/Create.cshtml
+++ b/Presentation/Safari.UI.Web/Areas/Admin/Views/Medico/Create.cshtml
@@ -2,13 +2,9 @@
 
 @{
     ViewBag.Title = "Nuevo";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/Admin/Views/Shared/_LayoutEmpty.cshtml";
 }
-@section head {
 
-    <link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet" />
-}
-<h2>Nuevo</h2>
 
 
 @using (Html.BeginForm("Create", "Medico", FormMethod.Post, new { @id = "frmCreate" }))
@@ -16,7 +12,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Medico</h4>
+        <h4>Nuevo Medico</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
@@ -97,11 +93,10 @@
     </div>
 }
 <div>
-    @Html.ActionLink("Volver al listado", "Index", new { id = "new" }, htmlAttributes: new { @class = "btn btn-sm btn-info" })
+    <input type="button" value="Volver al listado" class="btn btn-sm btn-info" onclick="parent.jQuery.fancybox.close()" />
 </div>
 
 @section Scripts {
-    @*http://www.kestrelblackmore.com/blog/jquery-datepicker-mvc4*@
     <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
 
 
