--- a/Presentation/Safari.UI.Web/Areas/Admin/Views/Medico/Edit.cshtml
+++ b/Presentation/Safari.UI.Web/Areas/Admin/Views/Medico/Edit.cshtml
@@ -2,10 +2,8 @@
 
 @{
     ViewBag.Title = "Editar";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/Admin/Views/Shared/_LayoutEmpty.cshtml";
 }
-
-<h2>Editar</h2>
 
 <link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet" />
 
@@ -15,7 +13,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Medico</h4>
+        <h4>Editar Medico</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
@@ -89,15 +87,12 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Guardar" class="btn btn-sm btn-success" />
+                <input style="margin-right: 10px" type="submit" value="Guardar" class="btn btn-sm btn-success" onclick="parent.jQuery.fancybox.close()" />
+                <input type="button" value="Volver" class="btn btn-sm btn-info" onclick="parent.jQuery.fancybox.close()" />
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Volver al listado", "Index", new { id = "new" }, htmlAttributes: new { @class = "btn btn-sm btn-info", @style = "margin-right: 10px" })
-</div>
 
 @section Scripts {
     @*http://www.kestrelblackmore.com/blog/jquery-datepicker-mvc4*@
