--- a/Presentation/Safari.UI.Web/Areas/Admin/Views/Shared/_LayoutEmpty.cshtml
+++ b/Presentation/Safari.UI.Web/Areas/Admin/Views/Shared/_LayoutEmpty.cshtml
@@ -4,6 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+    <link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet" />
     @Styles.Render("~/Content/admin-css")
     <meta name="x-font-awesome-stylesheet-fallback-test" class="fa">
     @Styles.Render("~/Content/fa")
