--- a/Presentation/Safari.UI.Web/Areas/Admin/Views/Shared/_MenuPartial.cshtml
+++ b/Presentation/Safari.UI.Web/Areas/Admin/Views/Shared/_MenuPartial.cshtml
@@ -5,7 +5,7 @@
         <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="themes">Maestros <span class="caret"></span></a>
             <ul class="dropdown-menu" aria-labelledby="themes">
-                <li>@Html.ActionLink("Especie", "Index", "Especie", new { area = "" }, null)</li>
+                <li>@Html.ActionLink("Especie", "Index", "Admin/Especie", new { area = "" }, null)</li>
                 <li>@Html.ActionLink("Sala", "Index", "Admin/Sala", new { area = "" }, null)</li>
                 <li class="divider"></li>
                 <li>@Html.ActionLink("Clientes", "Index", "Admin/Cliente", new { area = "" }, null)</li>
