--- a/Presentation/Safari.UI.Web/Areas/Admin/Views/TipoMovimiento/Create.cshtml
+++ b/Presentation/Safari.UI.Web/Areas/Admin/Views/TipoMovimiento/Create.cshtml
@@ -5,15 +5,13 @@
     Layout = "~/Areas/Admin/Views/Shared/_LayoutEmpty.cshtml";
 }
 
-<h2>Nuevo</h2>
-
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Tipo de Movimiento</h4>
+        <h4>Nuevo Tipo de Movimiento</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -34,15 +32,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Crear" class="btn btn-sm btn-success" />
-            </div>
+                <input style="margin-right: 10px" type="submit" value="Crear" class="btn btn-sm btn-success" onclick="parent.jQuery.fancybox.close()" />
+                <input type="button" value="Volver" class="btn btn-sm btn-info" onclick="parent.jQuery.fancybox.close()" />            </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Volver al listado", "Index", new { id = "new" }, htmlAttributes: new { @class = "btn btn-sm btn-info" })
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
