Sigue la cosa che....

--- a/Presentation/Safari.UI.Web/Areas/Admin/Views/Shared/_MenuPartial.cshtml
+++ b/Presentation/Safari.UI.Web/Areas/Admin/Views/Shared/_MenuPartial.cshtml
@@ -13,6 +13,7 @@
                 <li>@Html.ActionLink("Médicos", "Index", "Admin/Medico", new { area = "" }, null)</li>
                 <li class="divider"></li>
                 <li>@Html.ActionLink("Tipo de servicios", "Index", "Admin/TipoServicio", new { area = "" }, null)</li>
+                <li>@Html.ActionLink("Precio", "Index", "Admin/Precio", new { area = "" }, null)</li>
                 <li>@Html.ActionLink("Tipo de movimientos", "Index", "Admin/TipoMovimiento", new { area = "" }, null)</li>
             </ul>
         </li>
